Checked ng test and added some styles

--- a/ng-job-search-main/src/app/app.component.html
+++ b/ng-job-search-main/src/app/app.component.html
@@ -4,8 +4,8 @@
     <!-- Tab links -->
     <div class="nav">
         <ul>
-            <li><a class="center" [routerLink]="['/jobs']" routerLinkActive="activeroute"><b>JOBS</b></a></li>
-            <li><a class="center" [routerLink]="['/favorites']" routerLinkActive="activeroute"><b>FAVORITES</b></a></li>
+            <li><a class="center" [routerLink]="['/jobs']" routerLinkActive="activeroute">JOBS</a></li>
+            <li><a class="center" [routerLink]="['/favorites']" routerLinkActive="activeroute">FAVORITES</a></li>
         </ul>
     </div>
 
