--- a/ng-job-search-main/src/app/app.component.css
+++ b/ng-job-search-main/src/app/app.component.css
@@ -4,7 +4,7 @@
 }
 
 .header{
-    color: gray;
+    color: black;
 }
 
 .center {
@@ -30,21 +30,18 @@
 }
  
 .nav > ul > li > a {
-    color: #aaa;
+    color: black;
     line-height: 2em;
     padding: 0.5em 0.5em;
     text-decoration: none;
 }
 
 .nav li:hover{
-        a {
-            color: white;
-        }
+    font-weight: bold;
 }
  
 .activeroute {
+    font-weight: bold;
     background-color: gray;
-    a {
-        color: white;
-    }
+    color: white !important;
 }
