--- a/ng-job-search-main/src/app/favorites/favorites.component.css
+++ b/ng-job-search-main/src/app/favorites/favorites.component.css
@@ -6,7 +6,7 @@ table {
 td {
     border: none;
     padding: 0;
-    color: gray;
+    color: black;
     background-color: transparent;
 }
 
@@ -29,4 +29,20 @@ td {
 
 .line-height {
     line-height: 0.5;
+}
+
+@media screen and (max-width: 767px){
+    table tr, table.horizontal tr {
+        border: 0;
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+        background-color: transparent;
+    }
+
+    table td, table.horizontal td {
+        text-align: left;
+    }
+    table {
+        display: grid;
+    }
 }
