added hover color

--- a/ng-job-search-main/src/app/app.component.css
+++ b/ng-job-search-main/src/app/app.component.css
@@ -42,6 +42,6 @@
  
 .activeroute {
     font-weight: bold;
-    background-color: gray;
+    background-color: black;
     color: white !important;
 }
